Ignore the spec and binary output

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,7 @@ tusdotnet/TUSTestHelpers/obj/
 .vscode/
 
 *.pyc
+
+tus/file-hooks/metadata-verify/pre_create_bin.spec
+
+tus/file-hooks/metadata-verify/pre-create-bin
