Tusd file hooks meta unit test (#61)
* Start of python unit tests

* Updated the pre-create-bin build script

* Ignore the spec and binary output

* Added metadata verify (pre-create-bin) unit tests

---------

Co-authored-by: Matt B Krystof <ygj6@cdc.gov>

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,9 @@ tusdotnet/DEXTUSServer/obj/
 tusdotnet/TUSTestHelpers/obj/
 
 .vscode/
+
+*.pyc
+
+tus/file-hooks/metadata-verify/pre_create_bin.spec
+
+tus/file-hooks/metadata-verify/pre-create-bin
