single push mirror command

--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -7,12 +7,8 @@ jobs:
     name: "Mirror Commits To CDC Gov"
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Mirror
-        run: git clone --mirror git@github.com:cdcent/data-exchange-upload.git
+      - name: Checkout
+        uses: actions/checkout@v3
 
       - name: Clone to CDCGov
-        working-directory: data-exchange-upload
-        run: |
-          git remote set-url --push origin git@github.com:CDCgov/data-exchange-upload.git
-          git fetch -p origin
-          git push --mirror
+        run: git push --mirror git@github.com:CDCgov/data-exchange-upload.git
