--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -9,6 +9,12 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Install Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+      - name: Install jwt
+        run: pip install jwt
 
       - name: Clone to CDCGov
         run: git push --mirror git@github.com:CDCgov/data-exchange-upload.git
