--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -11,7 +11,7 @@ jobs:
       installToken: ${{ steps.get-token.outputs.token }}
     defaults:
       run:
-        working-directory: ./.github/workflows/scripts
+        working-directory: .github/workflows/scripts
     steps:
       - name: Install Python
         uses: actions/setup-python@v4
