--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -13,6 +13,8 @@ jobs:
       run:
         working-directory: .github/workflows/scripts
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
       - name: Install Python
         uses: actions/setup-python@v4
         with:
