--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -25,7 +25,7 @@ jobs:
         run: echo ${{ secrets.CDCENT_CDCGOV_SYNC_PRIVATE_KEY }} >> key.pem
       - name: Generate JWT
         id: get-jwt
-        run: python generate-jwt.py --private-key key.pem --app-id ${{ secrets.CDCENT_CDCGOV_SYNC_APP_ID }} >> "$GITHUB_OUTPUT"
+        run: python generate-jwt.py --pem key.pem --app-id ${{ secrets.CDCENT_CDCGOV_SYNC_APP_ID }} >> "$GITHUB_OUTPUT"
       - name: Get Install Token
         id: get-token
         run: ./get-install-access-token.sh ${{ steps.get-jwt.outputs.jwt }} ${{ secrets.CDCENT_CDCGOV_SYNC_INSTALLATION_ID }} >> "$GITHUB_OUTPUT"
