--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -19,8 +19,10 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-      - name: Install jwt
-        run: pip install pyjwt
+      - name: Install Python Dependencies
+        run: |
+          pip install pyjwt
+          pip install cryptographgy
       - name: Generate JWT
         id: get-jwt
         env:
