--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -30,7 +30,9 @@ jobs:
         run: python generate-jwt.py --app-id ${{ secrets.CDCENT_CDCGOV_SYNC_APP_ID }} >> $GITHUB_OUTPUT
       - name: Get Install Token
         id: get-token
-        run: ./get-install-access-token.sh ${{ steps.get-jwt.outputs.jwt }} ${{ secrets.CDCENT_CDCGOV_SYNC_INSTALLATION_ID }} >> $GITHUB_OUTPUT
+        run: |
+          sudo apt-get install jq
+          ./get-installation-access-token.sh ${{ steps.get-jwt.outputs.jwt }} ${{ secrets.CDCENT_CDCGOV_SYNC_INSTALLATION_ID }} >> $GITHUB_OUTPUT
   mirror:
     name: "Mirror Commits To CDC Gov"
     runs-on: ubuntu-latest
