--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -37,5 +37,5 @@ jobs:
         uses: actions/checkout@v3
       - name: Clone to CDCGov
         env:
-          GITHUB_TOKEN: ${{ needs.get-install-token.outputs.token }}
+          GITHUB_TOKEN: ${{ needs.get-install-token.outputs.installToken }}
         run: git push --mirror git@github.com:CDCgov/data-exchange-upload.git
