--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -26,5 +26,8 @@ jobs:
         env:
           PRIVATE_KEY: ${{ secrets.CDCENT_CDCGOV_SYNC_PRIVATE_KEY }}
         run: python get-install-token.py --app-id ${{ secrets.CDCENT_CDCGOV_SYNC_APP_ID }} --installation-id ${{ secrets.CDCENT_CDCGOV_SYNC_INSTALLATION_ID }} >> $GITHUB_OUTPUT
-      - name: Clone to CDCGov
-        run: git push --mirror https://x-access-token:${{ steps.get-token.outputs.token }}@github.com/cdcgov/data-exchange-upload.git
+      - name: Push to CDCGov
+        run: |
+          git remote set-url --push origin https://x-access-token:${{ steps.get-token.outputs.token }}@github.com/cdcgov/data-exchange-upload.git
+          git fetch -p origin
+          git push --mirror 
