--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -2,6 +2,9 @@ name: "Mirror To CDC Gov"
 
 on: [workflow_dispatch, push]
 
+permissions:
+  contents: write
+
 jobs:
   get-install-token:
     name: "Get Install Token"
