--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -29,8 +29,10 @@ jobs:
         env:
           PRIVATE_KEY: ${{ secrets.CDCENT_CDCGOV_SYNC_PRIVATE_KEY }}
         run: python get-install-token.py --app-id ${{ secrets.CDCENT_CDCGOV_SYNC_APP_ID }} --installation-id ${{ secrets.CDCENT_CDCGOV_SYNC_INSTALLATION_ID }} >> $GITHUB_OUTPUT
-      - name: Push to CDCGov
-        run: |
-          git remote set-url --push origin https://x-access-token:${{ steps.get-token.outputs.token }}@github.com/cdcgov/data-exchange-upload.git
-          git fetch -p origin
-          git push --mirror 
+      - name: push changes
+        uses: ad-m/github-push-action@v0.6.0
+        with:
+          github_token: ${{ steps.get-token.outputs.token }}
+          repository: cdcgov/data-exchange-upload
+          branch: main 
+          force: true
