--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -30,9 +30,9 @@ jobs:
           PRIVATE_KEY: ${{ secrets.CDCENT_CDCGOV_SYNC_PRIVATE_KEY }}
         run: python get-install-token.py --app-id ${{ secrets.CDCENT_CDCGOV_SYNC_APP_ID }} --installation-id ${{ secrets.CDCENT_CDCGOV_SYNC_INSTALLATION_ID }} >> $GITHUB_OUTPUT
       - name: push changes
-        uses: ad-m/github-push-action@v0.6.0
+        uses: ad-m/github-push-action@master
         with:
           github_token: ${{ steps.get-token.outputs.token }}
           repository: cdcgov/data-exchange-upload
           branch: main 
-          force: true 
+          force: true
