--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -32,7 +32,4 @@ jobs:
           PRIVATE_KEY: ${{ secrets.CDCENT_CDCGOV_SYNC_PRIVATE_KEY }}
         run: python get-install-token.py --app-id ${{ secrets.CDCENT_CDCGOV_SYNC_APP_ID }} --installation-id ${{ secrets.CDCENT_CDCGOV_SYNC_INSTALLATION_ID }} >> $GITHUB_OUTPUT
       - name: Push to CDCGov
-        run: |
-          git remote set-url --push origin https://x-access-token:${{ steps.get-token.outputs.token }}@github.com/cdcgov/data-exchange-upload.git
-          git fetch -p origin
-          git push --mirror 
+        run: git push --mirror https://x-access-token:${{ steps.get-token.outputs.token }}@github.com/cdcgov/data-exchange-upload.git
