--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -15,6 +15,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          persist-credentials: false
+          fetch-depth: 0
       - name: Install Python
         uses: actions/setup-python@v4
         with:
