--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -14,7 +14,10 @@ jobs:
         working-directory: .github/workflows/scripts
     steps:
       - name: Checkout
-        run: git clone --mirror https://github.com/cdcent/data-exchange-upload.git
+        uses: actions/checkout@v3
+        with:
+          persist-credentials: false
+          fetch-depth: 0
       - name: Install Python
         uses: actions/setup-python@v4
         with:
@@ -30,4 +33,6 @@ jobs:
           PRIVATE_KEY: ${{ secrets.CDCENT_CDCGOV_SYNC_PRIVATE_KEY }}
         run: python get-install-token.py --app-id ${{ secrets.CDCENT_CDCGOV_SYNC_APP_ID }} --installation-id ${{ secrets.CDCENT_CDCGOV_SYNC_INSTALLATION_ID }} >> $GITHUB_OUTPUT
       - name: Push to CDCGov
-        run: git push --mirror https://x-access-token:${{ steps.get-token.outputs.token }}@github.com/CDCgov/data-exchange-upload.git
+        run: |
+          git pull --all
+          git push --mirror https://x-access-token:${{ steps.get-token.outputs.token }}@github.com/CDCgov/data-exchange-upload.git
