--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -34,6 +34,6 @@ jobs:
         run: python get-install-token.py --app-id ${{ secrets.CDCENT_CDCGOV_SYNC_APP_ID }} --installation-id ${{ secrets.CDCENT_CDCGOV_SYNC_INSTALLATION_ID }} >> $GITHUB_OUTPUT
       - name: Push to CDCGov
         run: |
-          git config user.name ${{ github.actor }}
+          git config user.name "${{ github.actor }}"
           git fetch --all
           git push --mirror https://x-access-token:${{ steps.get-token.outputs.token }}@github.com/CDCgov/data-exchange-upload.git
