--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -17,6 +17,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+          persist-credentials: false
       - name: Install Python
         uses: actions/setup-python@v4
         with:
@@ -32,4 +33,5 @@ jobs:
           PRIVATE_KEY: ${{ secrets.CDCENT_CDCGOV_SYNC_PRIVATE_KEY }}
         run: python get-install-token.py --app-id ${{ secrets.CDCENT_CDCGOV_SYNC_APP_ID }} --installation-id ${{ secrets.CDCENT_CDCGOV_SYNC_INSTALLATION_ID }} >> $GITHUB_OUTPUT
       - name: Push to CDCGov
-        run: git fetch --all
+        run: |
+          git push --mirror https://x-access-token:${{ steps.get-token.outputs.token }}@github.com/CDCgov/data-exchange-upload.git
