--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+  workflow_dispatch:
 
 permissions:
   contents: write 
@@ -21,20 +22,24 @@ jobs:
         with:
           fetch-depth: 0
           persist-credentials: false
-      - name: Install Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
-      - name: Install Python Dependencies
-        run: |
-          pip install pyjwt
-          pip install cryptography
-          pip install requests
-      - name: Get Install Token
-        id: get-token
-        env:
-          PRIVATE_KEY: ${{ secrets.CDCENT_CDCGOV_SYNC_PRIVATE_KEY }}
-        run: python get-install-token.py --app-id ${{ secrets.CDCENT_CDCGOV_SYNC_APP_ID }} --installation-id ${{ secrets.CDCENT_CDCGOV_SYNC_INSTALLATION_ID }} >> $GITHUB_OUTPUT
       - name: Push to CDCGov
-        run: |
-          git push --mirror https://x-access-token:${{ steps.get-token.outputs.token }}@github.com/CDCgov/data-exchange-upload.git
+        uses: cdcent/cdcent-cdcgov-sync-action@v0.1
+        with:
+          destination-repo: data-exchange-upload
+      # - name: Install Python
+      #   uses: actions/setup-python@v4
+      #   with:
+      #     python-version: '3.10'
+      # - name: Install Python Dependencies
+      #   run: |
+      #     pip install pyjwt
+      #     pip install cryptography
+      #     pip install requests
+      # - name: Get Install Token
+      #   id: get-token
+      #   env:
+      #     PRIVATE_KEY: ${{ secrets.CDCENT_CDCGOV_SYNC_PRIVATE_KEY }}
+      #   run: python get-install-token.py --app-id ${{ secrets.CDCENT_CDCGOV_SYNC_APP_ID }} --installation-id ${{ secrets.CDCENT_CDCGOV_SYNC_INSTALLATION_ID }} >> $GITHUB_OUTPUT
+      # - name: Push to CDCGov
+      #   run: |
+      #     git push --mirror https://x-access-token:${{ steps.get-token.outputs.token }}@github.com/CDCgov/data-exchange-upload.git
