fix path filter for pre-create actions (#13)
* fix path filter for pre-create actions

* rename workflow

* rename CD workflow

--- a/.github/workflows/tus-pre-create-hook-unit-test.yml
+++ b/.github/workflows/tus-pre-create-hook-unit-test.yml
@@ -1,9 +1,9 @@
-name: "Tus Pre-Create Hook Checks"
+name: "Tus Pre-Create Hook Unit Tests"
 
 on:
   pull_request:
     paths:
-      - tus/file-hooks/metadata-verify
+      - tus/file-hooks/metadata-verify/**
 
 jobs:
   unit-test:
