run build and deploy after unit test (#14)

--- a/.github/workflows/tus-pre-create-hook.yml
+++ b/.github/workflows/tus-pre-create-hook.yml
@@ -20,6 +20,7 @@ jobs:
        run: python3 -m unittest discover -v test
   build-and-deploy:
     name: "build-and-deploy"
+    needs: unit-test
     runs-on: [self-hosted, python3]
     defaults:
       run:
