--- a/.github/workflows/tus-pre-create-hook.yml
+++ b/.github/workflows/tus-pre-create-hook.yml
@@ -3,37 +3,52 @@ name: "Tus Pre-Create Hook Build and Deploy"
 on:
   workflow_dispatch:
   push:
-      branches:
-        - main
-      paths:
-        - tus/file-hooks/metadata-verify/**
+    branches:
+      - main
+    paths:
+      - tus/file-hooks/metadata-verify/**
 
 jobs:
   unit-test:
-    name: "unit-test"
+    name: Unit Test
     runs-on: [self-hosted, python3]
     steps:
-     - name: Checkout
-       uses: actions/checkout@v3
-     - name: Run Unit Tests
-       working-directory: tus/file-hooks/metadata-verify
-       run: python3 -m unittest discover -v test
-  build-and-deploy:
-    name: "build-and-deploy"
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Run Unit Tests
+        working-directory: tus/file-hooks/metadata-verify
+        run: python3 -m unittest discover -v test
+  build-with-artifact:
+    name: Build - With Artifact
     needs: unit-test
-    runs-on: [self-hosted, python3]
+    runs-on: ubuntu-latest
     defaults:
       run:
         working-directory: tus/file-hooks/metadata-verify
     steps:
-     - name: Checkout
-       uses: actions/checkout@v3
-     - name: Build
-       run: |
-        pyinstaller --noconfirm --onefile --log-level DEBUG --clean pre_create_bin.py
-        cp dist/pre_create_bin pre-create-bin
-     - name: Upload to Blob Container
-       env:
-        STORAGE_ACCOUNT_NAME: ocioededataexchangedev
-        STORAGE_ACCOUNT_KEY: ${{ secrets.STORAGE_ACCOUNT_KEY }}
-       run: ./upload-to-blob-container.sh $STORAGE_ACCOUNT_NAME $STORAGE_ACCOUNT_KEY
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Build
+        run: |
+          ./podman-build-pre-create-bin.sh
+      - name: Get listing
+        run: ls -lh .
+      - name: Upload artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: pre-create-bin
+          path: ./tus/file-hooks/metadata-verify/pre-create-bin
+          retention-days: 7
+  deploy:
+    name: Upload to Blob Container
+    needs: build-with-artifact
+    runs-on: [self-hosted, python3]
+    env:
+      STORAGE_ACCOUNT_NAME: ocioededataexchangedev
+      STORAGE_ACCOUNT_KEY: ${{ secrets.STORAGE_ACCOUNT_KEY }}
+    steps:
+      - uses: actions/download-artifact@v3
+        with:
+          name: pre-create-bin
+      - run: ls -lh .
+      - run: ./tus/file-hooks/metadata-verify/upload-to-blob-container.sh $STORAGE_ACCOUNT_NAME $STORAGE_ACCOUNT_KEY
