--- a/supplemental-api-function-app/docs/upload-supplemental-api-open-api.yaml
+++ b/supplemental-api-function-app/docs/upload-supplemental-api-open-api.yaml
@@ -4,105 +4,115 @@ info:
   description: Swagger definition of the DeX bulk upload supplemental API.
   version: 1.0.0
 servers:
-- url: https://apidev.cdc.gov/1.0.0
-  description: Development server
-- url: https://api.cdc.gov/1.0.0
-  description: Production server
-- url: https://ocio-ede-dev-supplemental-api-kotlin.azurewebsites.net/api
-
+  - url: 'https://apidev.cdc.gov/1.0.0'
+    description: Development server
+  - url: 'https://api.cdc.gov/1.0.0'
+    description: Production server
+  - url: 'https://ocio-ede-dev-supplemental-api-kotlin.azurewebsites.net/api'
 tags:
   - name: DeX
     description: CDC Data Exchange
     externalDocs:
       description: Find out more
-      url: https://github.com/CDCgov/data-exchange-csv
-      
-# Apply the security globally to all operations
+      url: 'https://github.com/CDCgov/data-exchange-csv'
 security:
   - bearerAuth: []
-
 paths:
-  /status/{tguid}:
+  '/status/{tguid}':
     get:
       tags:
         - DeX
       summary: Provides upload status for a specific tguid.
-      description: Provides upload status for a specific tguid. Tus clients are used to initiate the upload. When the upload starts, clients are returned a unique identifer (tguid) used to resume uploads or identify the filename it is persisted as in blob storage once completed. The tguid will be used for getting a specific uploaded file's status..
+      description: >-
+        Provides upload status for a specific tguid. Tus clients are used to
+        initiate the upload. When the upload starts, clients are returned a
+        unique identifer (tguid) used to resume uploads or identify the filename
+        it is persisted as in blob storage once completed. The tguid will be
+        used for getting a specific uploaded file's status..
       parameters:
-      - name: tguid
-        in: path
-        description: Unique identifier of the upload to retrieve status on.
-        required: true
-        schema:
-          type: string
+        - name: tguid
+          in: path
+          description: Unique identifier of the upload to retrieve status on.
+          required: true
+          schema:
+            type: string
       responses:
-        200:
+        '200':
           description: Status of the given upload
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/UploadStatus'
-        400:
+        '400':
           description: Bad request.  The tguid provided was not found.
-        401:
+        '401':
           description: Authorization information is missing or invalid.
-  /status/destination/{destination_id}:
+  '/status/destination/{destination_id}':
     get:
       tags:
         - DeX
       summary: Provides all upload statuses for the given destination identifier.
-      description: Provides upload statuses for the given destination identifier that can be optionally filtered by meta_ext_event and date range.  Returned data is paginated.
+      description: >-
+        Provides upload statuses for the given destination identifier that can
+        be optionally filtered by meta_ext_event and date range.  Returned data
+        is paginated.
       parameters:
-      - name: ext_event
-        in: query
-        schema:
-          type: string
-        description: If specified, also filter by meta_ext_event that was provided with the upload.
-        example: RoutineImmunization
-      - name: destination_id
-        in: path
-        required: true
-        schema:
-          type: string
-        description: Destination identifier to retrieve all the upload statuses for.
-      - name: date_start
-        in: query
-        schema:
-          type: string
-        description: Start date of filter.  Format is YYYYMMDDTHHMMSSZ (UTC format, inclusive).  Defaults to 3 months prior to today.
-        example: 20231020T14103000Z
-      - name: date_end
-        in: query
-        schema:
-          type: string
-        description: End date of filter.  Format is YYYYMMDDTHHMMSSZ (UTC format, exclusive).  Defaults to today.
-        example: 20231030T14103000Z
-      - name: page_size
-        in: query
-        schema:
-          type: integer
-        description: Number of entries returned for the given page.
-        example: 50
-      - name: page_number
-        in: query
-        schema:
-          type: integer
-        description: Page number to retrieve.
-        example: 1
-      - name: sort_by
-        in: query
-        schema:
-          type: string
-        description: Can sort by date or event
-        example: date
-      - name: sort_order
-        in: query
-        schema:
-          type: string
-        description: Can sort by ascending or descening
-        example: descending
+        - name: ext_event
+          in: query
+          schema:
+            type: string
+          description: >-
+            If specified, also filter by meta_ext_event that was provided with
+            the upload.
+          example: RoutineImmunization
+        - name: destination_id
+          in: path
+          required: true
+          schema:
+            type: string
+          description: Destination identifier to retrieve all the upload statuses for.
+        - name: date_start
+          in: query
+          schema:
+            type: string
+          description: >-
+            Start date of filter.  Format is YYYYMMDDTHHMMSSZ (UTC format,
+            inclusive).  Defaults to 3 months prior to today.
+          example: 20231020T14103000Z
+        - name: date_end
+          in: query
+          schema:
+            type: string
+          description: >-
+            End date of filter.  Format is YYYYMMDDTHHMMSSZ (UTC format,
+            exclusive).  Defaults to today.
+          example: 20231030T14103000Z
+        - name: page_size
+          in: query
+          schema:
+            type: integer
+          description: Number of entries returned for the given page.
+          example: 50
+        - name: page_number
+          in: query
+          schema:
+            type: integer
+          description: Page number to retrieve.
+          example: 1
+        - name: sort_by
+          in: query
+          schema:
+            type: string
+          description: Can sort by date or event
+          example: date
+        - name: sort_order
+          in: query
+          schema:
+            type: string
+          description: Can sort by ascending or descening
+          example: descending
       responses:
-        200:
+        '200':
           description: All of the upload statuses for the given destination identifier
           content:
             application/json:
@@ -110,12 +120,11 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/UploadsStatus'
-        400:
+        '400':
           description: Bad request.  The destination identifier provided was not found.
-        401:
+        '401':
           description: Authorization information is missing or invalid.
 components:
-  # Define the security scheme type (HTTP bearer)
   securitySchemes:
     bearerAuth:
       type: http
@@ -154,14 +163,6 @@ components:
           format: double
           description: Total time the upload was or has been in progress.
           example: 34.4
-        meta_destination_id:
-          type: string
-          description: Destination for this upload, which was provided as metadata when the upload was started.
-          example: NDLP
-        meta_ext_event:
-          type: string
-          description: Event type for this upload, which was provided as metadata when the upload was started. 
-          example: RoutineImmunization
         timestamp:
           type: string
           description: Last modified timestamp for the upload status
@@ -199,5 +200,6 @@ components:
         key:
           type: string
         value:
-          type: string
-          
+          oneOf:
+          - type: string
+          - type: number
