Added workflow for supplemental-api deployment (#40)

--- a/supplemental-api-function-app/build.gradle
+++ b/supplemental-api-function-app/build.gradle
@@ -31,3 +31,14 @@ targetCompatibility = "1.8"
 repositories {
     mavenCentral()
 }
+
+azurefunctions {
+    subscription = System.getProperty("subscription")
+    resourceGroup = System.getProperty("resourceGroup")
+    appName = System.getProperty("appName")
+
+    auth {
+        type = 'azure_cli'
+    }
+}
+
