--- a/.github/workflows/cosmos-sync-function-app.yml
+++ b/.github/workflows/cosmos-sync-function-app.yml
@@ -50,7 +50,7 @@ jobs:
   deploy:
     name: Deploy Function App
     needs: publish
-    runs-on: [self-hosted, upload-java]
+    runs-on: [self-hosted, java]
     environment:
       name: dev
     steps:
