--- a/.github/workflows/gradle-function-app-ci-template.yml
+++ b/.github/workflows/gradle-function-app-ci-template.yml
@@ -11,3 +11,11 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ${{ inputs.WORKING_DIRECTORY }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Build
+        run: CI=true ./gradlew build
