--- a/.github/workflows/gradle-function-app-ci-template.yml
+++ b/.github/workflows/gradle-function-app-ci-template.yml
@@ -17,5 +17,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - uses: actions/setup-java@v3
+        with:
+          distribution: 'oracle'
+          java-version: '8'
       - name: Build
         run: CI=true ./gradlew build
