--- a/.github/workflows/gradle-function-app-ci-template.yml
+++ b/.github/workflows/gradle-function-app-ci-template.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/checkout@v3
       - uses: actions/setup-java@v3
         with:
-          distribution: 'oracle'
+          distribution: 'temurin'
           java-version: '8'
       - name: Build
         run: CI=true ./gradlew build
